--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>
 			Ball Simulation
 		</title>
-		<style>
+		<style>      
 			canvas{
 				position: absolute;
 				left:0pt;
@@ -114,5 +114,11 @@
 				</table>
 			</center>
 		</div>
+    
+  <div style="position:absolute; right:0; bottom: 0; color:gray; font-size:9pt;">
+    Developed by Rick Tu
+    |
+    <a href="https://github.com/ricktu288/ray-optics" target="_blank" style="color:gray">Source Code</a>
+  </div>
 	</body>
 </html>
