change overflow property

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				padding-bottom: 10pt;
 				font-size: 12pt;
 				white-space: nowrap;
-				overflow-x: scroll;
+				overflow-x: auto;
 			}
 			
 			.slider{
@@ -118,7 +118,7 @@
   <div style="position:absolute; right:0; bottom: 0; color:gray; font-size:9pt;">
     Developed by Rick Tu
     |
-    <a href="https://github.com/ricktu288/ray-optics" target="_blank" style="color:gray">Source Code</a>
+    <a href="https://github.com/ricktu288/ball-simulation" target="_blank" style="color:gray">Source Code</a>
   </div>
 	</body>
 </html>
