use Google Analytics

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 		</style>
 		<script src="main.js"></script>
 		<script src="RenderScene.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-82058200-1', 'auto');
+      ga('send', 'pageview');
+    </script>
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
@@ -118,7 +127,7 @@
   <div style="position:absolute; right:0; bottom: 0; color:gray; font-size:9pt;">
     Developed by Rick Tu
     |
-    <a href="https://github.com/ricktu288/ball-simulation" target="_blank" style="color:gray">Source Code</a>
+    <a href="https://github.com/ricktu288/balls-simulation" target="_blank" style="color:gray">Source Code</a>
   </div>
 	</body>
 </html>
