--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		</div>
     
   <div style="position:absolute; right:0; bottom: 0; color:gray; font-size:9pt;">
-    Developed by Rick Tu
+    Developed by Yi-Ting Tu
     |
     <a href="https://github.com/ricktu288/balls-simulation" target="_blank" style="color:gray">Source Code</a>
   </div>
