--- a/index.html
+++ b/index.html
@@ -115,10 +115,8 @@
 			</center>
 		</div>
     
-  <div style="position:absolute; right:0; bottom: 0; color:gray; font-size:9pt;">
-    Developed by Yi-Ting Tu
-    |
-    <a href="https://github.com/ricktu288/balls-simulation" target="_blank" style="color:gray">Source Code</a>
+  <div style="position:absolute; right:2px; bottom: 2px; color:gray; font-size:9pt;">
+    <a href="https://github.com/ricktu288/balls-simulation" target="_blank" style="color:gray">GitHub Repo</a>
   </div>
 	</body>
 </html>
